feat(data): add room database for feed cache, bookmarks and sync metadata
Room layer per PLAN.md v2 §6.5/§7.2: entities (FeedArticleEntity with
sortIndex + unique index, RemoteKeyEntity for the articles feed's keyset
cursor, BookmarkEntity, WeatherSnapshotEntity, ServiceCardEntity,
SyncMetadataEntity), DAOs (FeedArticleDao.pagingSource() joining bookmarks for
isBookmarked, RemoteKeyDao, BookmarkDao with escaped-LIKE search and pending
image downloads, WeatherDao, ServiceCardDao with atomic replaceAll,
SyncMetadataDao with read-modify-write markSuccess/markFailure),
LineFeedDatabase (version 1, exportSchema, no destructive-migration fallback),
DatabaseModule; mappers (ArticleMappers: ArticleDto<->entity<->domain incl.
FeedArticleWithBookmark -> FeedArticle, Article<->BookmarkEntity;
WeatherMappers: parallel-array zip with defensive shortest-length handling,
JSON-encoded daily forecast, today-filtering; ServiceCardMappers: ctaLabel
rounding/"Open" fallback). Schema exported to
core/data/schemas/.../1.json and committed.

Tests added: FeedArticleDaoTest (Robolectric + paging-testing's TestPager:
sortIndex ordering, bookmark join, append pagination, PagingSource
invalidation on bookmark change, insertAll IGNORE semantics, maxSortIndex/
existingIds/clearAll), RemoteKeyDaoTest, BookmarkDaoTest, ArticleMappersTest,
WeatherMappersTest, ServiceCardMappersTest. 65 tests total across the project,
all green.

Real problems hit, see docs/NOTES.md for full detail (not changing
docs/PLAN.md per the coordinator's instruction while it's being revised
elsewhere):
- All Robolectric tests failed under PLAN.md's suggested `@Config(sdk = [36])`
  with "Failed to interact with raw FileDescriptor internals" during
  Robolectric's own `ApplicationSharedMemory` setup, even after adding the
  full set of JDK17+ `--add-opens` flags Robolectric's docs recommend (kept in
  AndroidLibraryConventionPlugin regardless). Switching to `@Config(sdk =
  [35])` (still within Robolectric 4.17's supported 